struct MyTypeMini
{
    Bool bool
}


struct MyType
{
	Bool   bool
	Int32  int32
	UInt32 uint32

	Int64  int64
	UInt64 uint64

	Float32 float32
	Float64 float64
	Str  string
	Struct  MyType

	BoolSlice []bool

	Int32Slice []int32

	StrSlice []string

	Float32Slice []float32

	StructSlice []MyType
}